# python-otps2

./: CMakeLists.txt  setup.py
otps2/: __init__.py
scripts/: compare_tides.py
src/: otps2_wrapper.f90
src/OTPS2/: README  constit.h  dumsetup  predict_tide.f90  setup.inp  subs.f90
